# fastchain

./: .flake8  .gitignore  .replit  LICENSE  README.md  main.py  pyproject.toml  replit.nix
data/: learned_patterns.json  tool_patterns.json  tool_performance_history.json
docs/: agent_development.md  agent_endpoints.md  agent_manager.md  agent_registry.md  context_manager.md  decision_making.md  design_principles.md  graph_visualisation.md  graph_workflow.md  project_structure.md  task_engine.md
docs/agent_design/: chat_agent_design.md
docs/tests/: test_design.md  unit_test_rules.md
src/: app.py
src/agents/: __init__.py  base_agent.py  registry.json  registry.py
src/agents/chat_agent/: __init__.py  agent.json  agent.py  manager.py  task_engine.py  utils.py
src/agents/intent_agent/: __init__.py  agent.json  agent.py  intents_mapping.yaml  manager.py  task_engine.py  utils.py
src/api/: main_router.py
src/api/v1/: __init__.py  dependencies.py  models.old  routers.py  routes.old
src/communication/: README.md  __init__.py  communication.py
src/config/: .secrets.toml  config.py  settings.toml
src/context/: __init__.py  context_manager.py
src/graph/: workflow_orchestrator.py  workflow_visualization.py
src/learning/: __init__.py  feedback_loop.py
src/models/: __init__.py  base_model.py  chat_model.py  entity_extractor_model.py  intent_classifier_model.py  langchain_model.py  openai_model.py
src/routing/: decision_maker.py
src/tools/: __init__.py  base.py  discovery.py  exceptions.py  search.py
src/utils/: __init__.py  formatters.py  task_router.py
src/utils/logging/: __init__.py  config.py  file_handler.py  formatter.py  handler.py  logger.py
src/utils/metrics/: __init__.py  config.py  exporter.py  metrics.py  store.py  utils.py
src/utils/tracing/: __init__.py  config.py  propagator.py  span.py  tracer.py  utils.py
tests/: conftest.py  pytest.ini  settings.test.toml
tests/performance/: test_benchmark.py  test_load.py
tests/security/: test_penetration.py  test_static_analysis.py
tests/tools/unit/: test_base.py  (+3 more)
(+34 files in other folders)
